# Ai_practice

./: README.md
Autotrader Price Prediction/: Advanced ML CW.ipynb  README.md
Pneumonia Detection Keras/: README.md  pnumonia_detection.ipynb
RAG AI Document Reader/: RAG.py  README.md  requirements.txt
ROS Masters Project/: Command History  Final-year-project.ipynb  README.md
ROS Masters Project/(dot)gazebo/: gui.ini
ROS Masters Project/(dot)gazebo/models/warehouse/: model.config  model.sdf
ROS Masters Project/Project/: CustomNER.ipynb  lifting_using_legs.ipynb  usingspaCyTest.ipynb
ROS Masters Project/Project/devel/: .catkin
ROS Masters Project/Project/src/devel/: .catkin  local_setup.sh
ROS Masters Project/Project/src/scripts/: follow_coordinate.py
ROS Masters Project/Robotics Module/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ROS Masters Project/Robotics Module/rss2_catkin_ws/src/rss2_msgsrv_pkg/: CMakeLists.txt
ROS Masters Project/Robotics Module/rss2_catkin_ws/src/rss2_msgsrv_pkg/launch/: pub.launch  srvTurtlebot3.launch
ROS Masters Project/Robotics Module/rss2_catkin_ws/src/rss2_msgsrv_pkg/msg/: date_cmd_vel.msg
ROS Masters Project/Robotics Module/rss2_catkin_ws/src/rss2_msgsrv_pkg/scripts/: hw_srv_client.py  hw_srv_server.py  msg_pub.py  msg_sub.py  srv_server.py  srv_server_client.py
ROS Masters Project/Robotics Module/rss2_catkin_ws/src/rss2_msgsrv_pkg/srv/: srv_turtlebot3_move.srv
Threat Detection System/: README.md  Safety_System.ipynb
Threat Detection System/Security/security-vision-backend/: server.py
(+62 files in other folders)
